CookBook.Recipes/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cookbook-recipes-api
  namespace: cookbook
  labels:
    app: cookbook-recipes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cookbook-recipes-api
  template:
    metadata:
      labels:
        app: cookbook-recipes-api
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 2000
      containers:
        - name: cookbook-recipes-api
          image: cookbook-recipes-image
          imagePullPolicy: Never
          ports:
            - containerPort: 8010
          readinessProbe:
            httpGet:
              path: /.less-known/readiness
              port: 8010
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /.less-known/liveness
              port: 8010
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
