CookBook.Recipes/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cookbook-recipes-api
  namespace: cookbook
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cookbook-recipes-api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cookbook-recipes-api
                port:
                  number: 8010
